--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ body.dark-mode {
 /* تظليل الخلفيات حسب الوضع */
 .dark-mode header,
 .dark-mode .card,
+.dark-mode footer,
 .dark-mode .card1 {
   background-color: #2b2b2b;
   border-color: #444;
