--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@ header img {
     .theme-toggle:hover {
       background: #1c5982;
     }
+        footer{
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: #2980b9;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+    }
     /*دارك مود*/
     body.light-mode {
   background: #f5f7fa;
@@ -306,16 +316,7 @@ body.dark-mode {
     </div>
   </div>
 
-<footer style="
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: #2980b9;
-  color: white;
-  text-align: center;
-  padding: 10px 0;
-">
+<footer>
   جميع الحقوق محفوظة عبدالخالق النعيمي © 2025
 </footer>
 
