--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -28,17 +29,32 @@ header {
   padding: 15px;
   font-size: 1.8em;
   font-weight: bolder;
-
+  direction: rtl; /* التأكد من المحاذاة لليمين (إذا كنت تستخدم نصًا عربيًا) */
+  
   display: flex;
-  align-items: center;    /* محاذاة عمودية وسط */
-  justify-content: center; /* محاذاة أفقية وسط */
-  gap: 10px; /* مسافة بين الصورة والنص */
 }
 
 header img {
+  margin-top: 8px;
+  margin-left: 70px;
   width: 55px;
-  height: auto;
+  margin-right: 60px; /* إضافة مسافة بين الصورة والحافة اليمنى */
 }
+
+header .text-container {
+  margin-right: -50px;
+  display: flex;
+  flex-direction: column; /* ترتيب النص والرابط عموديًا */
+  align-items: flex-start; /* محاذاة النص والرابط إلى اليسار */
+}
+
+header a {
+  text-decoration: none;
+  font-size: 14px;
+  color: white;
+  margin-top: 5px; /* المسافة بين العنوان والرابط */
+}
+
 
 
 
@@ -272,9 +288,11 @@ body.dark-mode {
 
 <header>
   <img src="images/logo.png" alt="">
-  محرر الملفات الذكي
+    <div class="text-container">
 
-
+  <span>محرر الملفات الذكي</span>
+  <a href="index.html" target="_blank">الرئيسية</a>
+    </div>
   <button class="theme-toggle" id="themeToggle" title="تبديل الوضع">
     <i class="fa-solid fa-moon"></i>
   </button>
