--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ header {
 }
 
 header img {
+  height: auto;
   margin-top: 8px;
   margin-left: 70px;
   width: 55px;
@@ -51,7 +52,7 @@ header .text-container {
 header a {
   text-decoration: none;
   font-size: 14px;
-  color: white;
+  color: rgb(0, 0, 0);
   margin-top: 5px; /* المسافة بين العنوان والرابط */
 }
 
@@ -65,7 +66,7 @@ header a {
         align-items: center;    /* محاذاة عمودية وسط */
         justify-content: center; /* محاذاة أفقية وسط */
         gap: 10px; /* مسافة بين الصورة والنص */
-        margin-top: 60px;
+        margin-top: 45px;
 
     }
 
@@ -231,6 +232,9 @@ header a {
       padding: 10px 0;
     }
     /*دارك مود*/
+  body.dark-mode header a {
+    color: rgb(255, 255, 255);
+}
     body.light-mode {
   background: #f5f7fa;
   color: #333;
@@ -300,7 +304,7 @@ body.dark-mode {
 
 <div class="container">
   <!-- مثال على خدمة واحدة -->
-  <div class="card" onclick="location.href='trim-margin.html'">
+  <div class="card" onclick="location.href='imgs.html'">
     <div class="card-icon"><i class="fa-solid fa-images"></i></div>
     <div class="card-title">خدمات الصور</div>
     <div class="card-desc"> بسهولة يمكنك ازالة خلفية الصورة او ضغط حجمها وغيرها من الخدمات</div>
