--- a/imgs.html
+++ b/imgs.html
@@ -232,12 +232,7 @@ body.dark-mode {
 .card label {
   background: #3498db;
   color: white;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 8px;
   cursor: pointer;
-  font-weight: bold;
-  width: 200px;
   margin-top: 15px;
   text-transform: uppercase;
   transition: background-color 0.3s ease, transform 0.3s ease;
@@ -247,7 +242,6 @@ body.dark-mode {
 .card button {
   font-family: "Tajawal", sans-serif;
   margin-right: 0; /* Reset margin to center the button */
-  margin-top: 10px; /* Adjust margin for better spacing */
 }
 
 
@@ -284,8 +278,6 @@ body.dark-mode {
   background-color: #db3434;
   color: white;
   font-size: 14px;
-  border-radius: 8px;
-  padding: 8px 16px;
   width: 70px;
   cursor: pointer;
   font-weight: bold;
@@ -294,7 +286,7 @@ body.dark-mode {
 }
 
 .card .file-upload-container label:hover {
-  background-color: #2980b9;
+  background-color: #992626;
 }
 
 /*الادواتــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
@@ -315,7 +307,7 @@ body.dark-mode {
       border-radius: 12px;
       padding: 20px;
       width: 300px;
-      height: 200px;
+      height: 160px;
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
       transition: 0.3s;
@@ -354,7 +346,34 @@ body.dark-mode {
       font-size: 0.95em;
       margin-right: 60px;
     }
+    .button-row {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap; /* للهواتف */
+  margin-top: 15px;
+}
+
+.button-row label,
+.button-row button {
+  color: white;
+  border: none;
+  margin-top: -10px;
+  padding: 8px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  width: 160px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  font-family: "Tajawal", sans-serif;
+}
 /*جديديدديديدي\ديد*/
+h2{
+  text-align: center;
+  font-weight: bolder;
+}
 
   </style>
 </head>
@@ -372,6 +391,7 @@ body.dark-mode {
   </button>
 </header>
 
+<h2>خدمات الصور</h2>
 
 <div class="container">
  <!-- مثال على خدمة واحدة -->
@@ -380,23 +400,29 @@ body.dark-mode {
   <div class="card">
     <div class="card-icon"><i class="fa-solid fa-image"></i></div>
     <div class="card-title">إزالة خلفية الصورة</div>
-    <div class="card-desc">بسهولة يمكنك إزالة خلفية الصورة من خلال اختيار الصورة والضغط على إزالة.</div>
-    <div class="file-upload-container">
-      <input type="file" accept="image/*" id="bgRemoveInput" />
-      <label for="bgRemoveInput">اختر صورة</label>
-      <button onclick="removeBackground()">إزالة وتحميل</button>
-    </div>
+    <div class="card-desc">بسهولة يمكنك إزالة خلفية الصورة من خلال اختيار الصورة والضغط على ازالة وسيتم تحميل الصورة مباشرة.</div>
+  <div class="file-upload-container">
+  <input type="file" accept="image/*" id="bgRemoveInput" />
+  <div class="button-row">
+    <label for="bgRemoveInput">اختر صورة</label>
+    <button onclick="removeBackground()">إزالة وتحميل</button>
+  </div>
+</div>
+
   </div>
 
   <!-- ضغط الصور -->
   <div class="card">
     <div class="card-icon"><i class="fa-solid fa-compress"></i></div>
     <div class="card-title">ضغط الصور</div>
-    <div class="card-desc">اختر صورة لتقليص حجمها دون فقدان الجودة.</div>
+    <div class="card-desc">يمكنك بسهولة اختيار صورة لتقليص حجمها دون فقدان الجودة وستيم تحميل الصورة مباشرة على جهازك .</div>
     <div class="file-upload-container">
       <input type="file" accept="image/*" id="compressInput" />
+        <div class="button-row">
+
       <label for="compressInput">اختر صورة</label>
       <button onclick="compressImage()">ضغط وتحميل</button>
+    </div>
     </div>
   </div>
 
@@ -404,7 +430,7 @@ body.dark-mode {
   <div class="card">
     <div class="card-icon"><i class="fa-solid fa-file-pdf"></i></div>
     <div class="card-title">تحويل صورة إلى PDF</div>
-    <div class="card-desc">اختر صورة لتحويلها إلى ملف PDF.</div>
+    <div class="card-desc">صورة الى ملف PDF.</div>
     <select id="pageSize">
       <option value="a4">A4</option>
       <option value="a5">A5</option>
@@ -412,8 +438,11 @@ body.dark-mode {
     </select>
     <div class="file-upload-container">
       <input type="file" accept="image/*" id="imgToPdfInput" />
+        <div class="button-row">
+
       <label for="imgToPdfInput">اختر صورة</label>
       <button onclick="imageToPDF()">تحويل وتحميل</button>
+    </div>
     </div>
   </div>
 
@@ -421,11 +450,14 @@ body.dark-mode {
   <div class="card">
     <div class="card-icon"><i class="fa-solid fa-images"></i></div>
     <div class="card-title">صور متعددة إلى PDF</div>
-    <div class="card-desc">اختر عدة صور لتحويلها إلى ملف PDF.</div>
+    <div class="card-desc">يمكنك بسهولة اختيار عدة صور لتحويلها إلى ملف PDF         بالضغط على تحويل جميع الصور سيتم تحميل الملف على جهازك.</div>
     <div class="file-upload-container">
       <input type="file" accept="image/*" id="multiImgInput" multiple />
+        <div class="button-row">
+
       <label for="multiImgInput">اختر صور</label>
       <button onclick="multiImageToPDF()">تحويل جميع الصور</button>
+    </div>
     </div>
   </div>
 
