--- a/imgs.html
+++ b/imgs.html
@@ -131,10 +131,7 @@ header a {
   body.dark-mode header a {
     color: rgb(255, 255, 255);
 }
-    body.light-mode {
-  background: #f5f7fa;
-  color: #333;
-}
+
 
 body.dark-mode {
   background: #1a1a1a;
@@ -311,6 +308,9 @@ body.dark-mode {
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
       transition: 0.3s;
+    }
+    body.dark-mode .card{
+      background:none;
     }
 
     .card:hover {
