--- a/imgs.html
+++ b/imgs.html
@@ -304,7 +304,7 @@ body.dark-mode {
       border-radius: 12px;
       padding: 20px;
       width: 300px;
-      height: 160px;
+      height: 200px;
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
       transition: 0.3s;
@@ -363,7 +363,7 @@ body.dark-mode {
   border-radius: 8px;
   cursor: pointer;
   font-weight: bold;
-  width: 160px;
+  width: 120px;
   text-align: center;
   text-transform: uppercase;
   transition: background-color 0.3s ease, transform 0.3s ease;
@@ -456,7 +456,7 @@ h2{
         <div class="button-row">
 
       <label for="multiImgInput">اختر صور</label>
-      <button onclick="multiImageToPDF()">تحويل جميع الصور</button>
+      <button onclick="multiImageToPDF()">تحويل الصور</button>
     </div>
     </div>
   </div>
