--- a/imgs.html
+++ b/imgs.html
@@ -400,7 +400,7 @@ h2{
   <div class="card">
     <div class="card-icon"><i class="fa-solid fa-image"></i></div>
     <div class="card-title">إزالة خلفية الصورة</div>
-    <div class="card-desc">بسهولة يمكنك إزالة خلفية الصورة من خلال اختيار الصورة والضغط على ازالة وسيتم تحميل الصورة مباشرة.</div>
+    <div class="card-desc">يمكنك بسهولة إزالة خلفية الصورة من خلال اختيار الصورة والضغط على ازالة وسيتم تحميل الصورة مباشرة اذا كانت الصورة مدعومـــة .</div>
   <div class="file-upload-container">
   <input type="file" accept="image/*" id="bgRemoveInput" />
   <div class="button-row">
@@ -415,7 +415,7 @@ h2{
   <div class="card">
     <div class="card-icon"><i class="fa-solid fa-compress"></i></div>
     <div class="card-title">ضغط الصور</div>
-    <div class="card-desc">يمكنك بسهولة اختيار صورة لتقليص حجمها دون فقدان الجودة وستيم تحميل الصورة مباشرة على جهازك .</div>
+    <div class="card-desc">يمكنك بسهولة اختيار صورة لتقليص او تصغير حجمها دون فقدان الجودة الاصلية وستيم تحميل الصورة مباشرة على جهازك .</div>
     <div class="file-upload-container">
       <input type="file" accept="image/*" id="compressInput" />
         <div class="button-row">
