--- a/imgs.html
+++ b/imgs.html
@@ -67,7 +67,7 @@ header a {
 
 .footer {
   text-align: center;
-  margin-top: -30px;
+  margin-bottom: 20px;
 }
 
 .footer .programmer {
@@ -207,6 +207,26 @@ body.dark-mode {
   background-color: #f9f9f9;
   font-size: 1em;
   transition: border 0.3s ease;
+}
+.card select {
+  width: 100%;
+  height: 40px;
+  font-size: 12px;
+  font-family: "Tajawal", sans-serif;
+  margin: 10px 0;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  transition: border 0.3s ease;
+}
+body.dark-mode select {
+  height: 40px;
+  text-align: center;
+  background: #1a1a1a;
+  color: white;
+  font-size: 12px;
+  font-family: "Tajawal", sans-serif;
 }
 
 .card input[type="file"]:hover,
@@ -431,7 +451,8 @@ h2{
     <div class="card-icon"><i class="fa-solid fa-file-pdf"></i></div>
     <div class="card-title">تحويل صورة إلى PDF</div>
     <div class="card-desc">صورة الى ملف PDF.</div>
-    <select id="pageSize">
+    <select id="pageSize" >
+      <option value="a">انقر لإختيار حجم الورقة</option>
       <option value="a4">A4</option>
       <option value="a5">A5</option>
       <option value="letter">Letter</option>
