--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>محرر الملفات الذكي</title>
+  <link rel="icon" href="images/no-background (6).png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=picture_as_pdf" />
   <!-- مكتبات PDF -->
@@ -35,10 +36,10 @@ header {
 }
 
 header img {
-  height: auto;
-  margin-top: 8px;
+  height: 65px;
+  margin-top: 2px;
   margin-left: 70px;
-  width: 55px;
+  width: 65px;
   margin-right: 60px; /* إضافة مسافة بين الصورة والحافة اليمنى */
 }
 
@@ -71,7 +72,7 @@ header a {
     }
 
     .container {
-      margin-top: 80px;
+      margin-top: 15px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -173,6 +174,7 @@ header a {
 .footer {
   text-align: center;
   margin-top: 20px;
+  margin-bottom: 200px;
 }
 
 .footer .programmer {
@@ -221,8 +223,7 @@ header a {
     .theme-toggle:hover {
       background: #1c5982;
     }
-        footer{
-      position: fixed;
+    footer {
       bottom: 0;
       left: 0;
       width: 100%;
@@ -230,6 +231,36 @@ header a {
       color: white;
       text-align: center;
       padding: 10px 0;
+      margin-top: -150px;
+      
+    }
+    footer .send{
+      margin-top: 10px;
+    }
+footer img {
+  margin-top: 15px;
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 20px;
+}
+    footer .span{
+            border-top: #ffffff solid 2px;
+            width: 100%;
+
+    }
+    footer a{
+      color: rgb(255, 255, 255);
+      text-decoration: none;
+      display: block;
+    }
+    footer a:hover{
+      color: rgb(142, 0, 0);
+      text-decoration:underline;
+      font-weight: bolder;
     }
     /*دارك مود*/
   body.dark-mode header a {
@@ -286,12 +317,20 @@ body.dark-mode {
     font-weight: bolder;
   }
 }
+.container h2 {
+  font-size: 17px;
+  display: block;         /* تأكد أنه عنصر بلوك */
+  width: 100%;            /* ياخذ كل عرض السطر */
+  margin: 0 auto;         /* يحاذي في الوسط */
+  text-align: center;     /* يوسّط النص نفسه */
+}
+
   </style>
 </head>
 <body>
 
 <header>
-  <img src="images/logo.png" alt="">
+  <img src="images/logo-home.png" alt="">
     <div class="text-container">
 
   <span>محرر الملفات الذكي</span>
@@ -303,14 +342,15 @@ body.dark-mode {
 </header>
 
 <div class="container">
+  <h2>اختر احدى الخدمات للبدء...</h2>
   <!-- مثال على خدمة واحدة -->
-  <div class="card" onclick="location.href='imgs.html'">
+<div class="card1" onclick="window.open('imgs.html', '_blank')">
     <div class="card-icon"><i class="fa-solid fa-images"></i></div>
     <div class="card-title">خدمات الصور</div>
     <div class="card-desc"> بسهولة يمكنك ازالة خلفية الصورة او ضغط حجمها وغيرها من الخدمات</div>
   </div>
   <!-- مثال على خدمة واحدة -->
-  <div class="card1" onclick="location.href='trim-margidn.html'">
+<div class="card1" onclick="window.open('trim-margidn.html', '_blank')">
     <div class="card1-icon"><span class="material-symbols-outlined">picture_as_pdf</span></div>
     <div class="card1-title">خدمات PDF</div>
     <div class="card1-desc"> بسهولة يمكنك تحويل الصور الى ملف PDF وغيرها من الخدمات </div>
@@ -339,7 +379,15 @@ body.dark-mode {
   </div>
 
 <footer>
-  جميع الحقوق محفوظة عبدالخالق النعيمي © 2025
+  <div class="send">
+    <a href="index.html" >الصفحة الرئيسية</a>
+    <a href="imgs.html" >خدمات الصور </a>
+    <a href="pdf.html" >خدمات PDF </a>
+  </div>
+  <img src="images/no-background (6).png">
+  <div class="span">
+  <span>  جميع الحقوق محفوظة عبدالخالق النعيمي © 2025</span>
+    </div>
 </footer>
 
   <script>
