--- a/imgs.html
+++ b/imgs.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>محرر الملفات الذكي</title>
+    <link rel="icon" href="images/no-background (6).png">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=picture_as_pdf" />
   <!-- مكتبات PDF -->
@@ -29,7 +31,6 @@ header {
   box-shadow: 4px 2px 20px #2c3e5020;
   color: #2980b9;
   padding: 15px;
-  font-size: 1.8em;
   font-weight: bolder;
   direction: rtl; /* التأكد من المحاذاة لليمين (إذا كنت تستخدم نصًا عربيًا) */
   
@@ -37,37 +38,137 @@ header {
 }
 
 header img {
-  height: auto;
-  margin-top: 8px;
+  height: 65px;
+  margin-top: 2px;
   margin-left: 70px;
-  width: 55px;
+  width: 65px;
   margin-right: 60px; /* إضافة مسافة بين الصورة والحافة اليمنى */
 }
-
-header .text-container {
-  margin-right: -50px;
-  display: flex;
-  flex-direction: column; /* ترتيب النص والرابط عموديًا */
-  align-items: flex-start; /* محاذاة النص والرابط إلى اليسار */
-}
-
-header a {
-  text-decoration: none;
-  font-size: 14px;
-  color: rgb(0, 0, 0);
-  margin-top: 5px; /* المسافة بين العنوان والرابط */
+header span{
+  margin-right: -60px;
+  margin-top: 15px;
+  font-size:22px;
 }
 
 
-    .container {
-      margin-top: -60px;
 
-      justify-content: center;
+
+
+
+
+    .cont{
+        display: flex;
+        align-items: center;    /* محاذاة عمودية وسط */
+        justify-content: center; /* محاذاة أفقية وسط */
+        gap: 10px; /* مسافة بين الصورة والنص */
+        margin-top: 45px;
+
     }
 
+    .container {
+      margin-top: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 30px;
+      gap: 20px;
+    }
+
+    .card {
+      background: none;
+      border: 1.5px solid #cccccc;
+      border-radius: 12px;
+      padding: 20px;
+      width: 300px;
+      height: 100px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: 0.3s;
+    }
+
+    .card:hover {
+      background: white;
+          border: 1.5px solid #3498db;
+
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    .card-icon {
+      display: flex;
+      float: left;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      background: #2980b9;
+      color: white;
+      font-size: 24px;
+      border-radius: 8px;
+    }
+
+    .card-title {
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-right: 60px;
+    }
+
+    .card-desc {
+      margin-top: 10px;
+      color: #555;
+      font-size: 0.95em;
+      margin-right: 60px;
+    }
+    .card1 {
+      background: none;
+      border: 1.5px solid #cccccc;
+      border-radius: 12px;
+      padding: 20px;
+      width: 300px;
+      height: 100px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: 0.3s;
+    }
+
+    .card1:hover {
+      background: white;
+          border: 1.5px solid #3498db;
+
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+.card1-icon {
+  display: flex;
+  float: left;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background: #2980b9;
+  color: white;
+  font-size: 24px;
+  border-radius: 8px;
+}
+
+
+    .card1-title {
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-right: 60px;
+    }
+
+    .card1-desc {
+      margin-top: 10px;
+      color: #555;
+      font-size: 0.95em;
+      margin-right: 60px;
+    }
 .footer {
   text-align: center;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 200px;
 }
 
 .footer .programmer {
@@ -116,9 +217,7 @@ header a {
     .theme-toggle:hover {
       background: #1c5982;
     }
-        footer{
-      
-      position: fixed;
+    footer {
       bottom: 0;
       left: 0;
       width: 100%;
@@ -126,12 +225,45 @@ header a {
       color: white;
       text-align: center;
       padding: 10px 0;
+      margin-top: -150px;
+      
+    }
+    footer .send{
+      margin-top: 10px;
+    }
+footer img {
+  margin-top: 15px;
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 20px;
+}
+    footer .span{
+            border-top: #ffffff solid 1.5px;
+            width: 100%;
+
+    }
+    footer a{
+      color: rgb(255, 255, 255);
+      text-decoration: none;
+      display: block;
+    }
+    footer a:hover{
+      color: rgb(142, 0, 0);
+      text-decoration:underline;
+      font-weight: bolder;
     }
     /*دارك مود*/
   body.dark-mode header a {
     color: rgb(255, 255, 255);
 }
-
+    body.light-mode {
+  background: #f5f7fa;
+  color: #333;
+}
 
 body.dark-mode {
   background: #1a1a1a;
@@ -140,10 +272,29 @@ body.dark-mode {
 
 /* تظليل الخلفيات حسب الوضع */
 .dark-mode header,
-.dark-mode footer {
+.dark-mode .card,
+.dark-mode footer,
+.dark-mode .card1 {
   background-color: #2b2b2b;
   border-color: #444;
   box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
+}
+
+.dark-mode .card:hover,
+.dark-mode .card1:hover {
+  background-color: #333;
+  border-color: #2980b9;
+  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);
+}
+
+.dark-mode .card-icon,
+.dark-mode .card1-icon {
+  background-color: #3498db;
+}
+
+.dark-mode .card-desc,
+.dark-mode .card1-desc {
+  color: #ccc;
 }
 
 .dark-mode .footer .social-icons a {
@@ -400,12 +551,10 @@ h2{
 <body>
 
 <header>
-  <img src="images/logo.png" alt="">
-    <div class="text-container">
+  <img src="images/logo-home.png" alt="">
 
   <span>محرر الملفات الذكي</span>
-  <a href="index.html" target="_blank">الرئيسية</a>
-    </div>
+
   <button class="theme-toggle" id="themeToggle" title="تبديل الوضع">
     <i class="fa-solid fa-moon"></i>
   </button>
@@ -502,7 +651,16 @@ h2{
 </div>
 
 <footer>
-  جميع الحقوق محفوظة عبدالخالق النعيمي © 2025
+  <div class="send">
+    <a href="index.html" >الصفحة الرئيسية</a>
+    <a href="imgs.html" >خدمات الصور </a>
+    <a href="pdf.html" >خدمات PDF </a>
+  </div>
+  <img src="images/no-background (6).png">
+  <div class="span">
+    <br>
+  <span>  جميع الحقوق محفوظة عبدالخالق النعيمي © 2025</span>
+    </div>
 </footer>
 
   <script>
