--- a/index.html
+++ b/index.html
@@ -308,6 +308,26 @@ body.dark-mode {
     font-weight: bolder;
   }
 }
+#scrollBtn {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  color:darkred;
+  background: none;
+  border: none;
+
+  font-size: 25px;
+  cursor: pointer;
+  display: none; /* مخفي بالبداية */
+  text-shadow: 0 2px 8px rgba(0,0,0,0.3);
+  transition: opacity 0.3s ease;
+}
+
+#scrollBtn:hover {
+  background:none;
+}
+
 .container h2 {
   font-size: 17px;
   display: block;         /* تأكد أنه عنصر بلوك */
@@ -329,6 +349,7 @@ body.dark-mode {
     <i class="fa-solid fa-moon"></i>
   </button>
 </header>
+<button onclick="scrollToTop()" id="scrollBtn" title="العودة للأعلى"><i class="fa-solid fa-chevron-up"></i></button>
 
 <div class="container">
   <h2>اختر احدى الخدمات للبدء...</h2>
@@ -406,6 +427,23 @@ body.dark-mode {
       }
     });
   </script>
+<script>
+  const scrollBtn = document.getElementById("scrollBtn");
+
+  // إظهار الزر عند التمرير لأسفل 100px
+  window.onscroll = function() {
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+      scrollBtn.style.display = "block";
+    } else {
+      scrollBtn.style.display = "none";
+    }
+  };
+
+  // وظيفة الصعود لأعلى
+  function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
+</script>
 
 </body>
 </html>
