--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ body.dark-mode {
     <div class="card-desc"> بسهولة يمكنك ازالة خلفية الصورة او ضغط حجمها وغيرها من الخدمات</div>
   </div>
   <!-- مثال على خدمة واحدة -->
-<div class="card1" onclick="window.open('trim-margidn.html', '_blank')">
+<div class="card1" onclick="window.open('pdf.html', '_blank')">
     <div class="card1-icon"><span class="material-symbols-outlined">picture_as_pdf</span></div>
     <div class="card1-title">خدمات PDF</div>
     <div class="card1-desc"> بسهولة يمكنك تحويل الصور الى ملف PDF وغيرها من الخدمات </div>
