--- a/pdf.html
+++ b/pdf.html
@@ -600,7 +600,7 @@ h2{
 <div class="card">
   <div class="card-icon"><i class="fa-solid fa-image"></i></div>
   <div class="card-title">تحويل صورة إلى PDF</div>
-  <div class="card-desc">اختر حجم الصفحة المناسب ثم حدد صورة لتحويلها إلى ملف PDF.</div>
+  <div class="card-desc">اختر صورة لتحويلها إلى ملف PDF.</div>
   <div class="file-upload-container">
     <select id="pageSize">
       <option value="size-paper">اختر حجم الورقة</option>
