--- a/pdf.html
+++ b/pdf.html
@@ -330,7 +330,6 @@ body.dark-mode {
   padding: 12px;
   border-radius: 8px;
   border: 1px solid #ccc;
-  font-size: 1em;
   transition: border 0.3s ease;
 }
 
@@ -540,18 +539,27 @@ h2{
   background:none;
 }
 .card textarea{
+  max-width: 100%;
   height: 35px;
-  background-color: #f7003e0f;
+  background-color: #6528650f;
   font: bolder;
   padding: 0;
+  padding: 1px  !important;
+
 }
- body.dark-mode .card textarea{
-  background-color: #000000;
-  color: white;
+
+body.dark-mode .card textarea {
+  background-color: #1a1a1a !important;
+  color: white !important;
+  border: 1px solid #555;
+  padding: 1px  !important;
+}
+body.dark-mode .card .copy{
+  color: #ffffff !important;
 }
 .card .copy{
   background: none;
-  color: #1a1a1a;
+  color: #000000;
   border: none;
   margin-top: -40px;
   margin-right: 260px;
@@ -561,6 +569,7 @@ h2{
   color: #830202;
 
 }
+ 
   </style>
 </head>
 <body>
