--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>محرر الملفات الذكي</title>
-  <link rel="icon" href="images/no-background (6).png">
+  <link rel="icon" href="images/logo-home.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=picture_as_pdf" />
   <!-- مكتبات PDF -->
@@ -374,7 +374,7 @@ body.dark-mode {
       </span>
     
       <span>
-        <img src="logo2.png" alt="">
+        <img src="images/logomansor.png" alt="">
         بالتعاون مع محفظتي المكتبية
       </span>
     </div>
