--- a/imgs.html
+++ b/imgs.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=picture_as_pdf" />
   <!-- مكتبات PDF -->
+   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.9.0"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0.5"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
@@ -651,6 +653,44 @@ h2{
 
   .card .Download-button i {
     margin-right: 5px;}
+
+
+
+
+
+
+
+ 
+
+ 
+  .choice-buttons {
+    position: absolute;
+    top: 40px; /* أسفل "اختر صورة" تقريبًا */
+    left: 0;
+    display: none;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    padding: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    z-index: 10;
+    gap: 6px;
+  }
+
+  .choice-buttons button {
+    padding: 5px 10px;
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 2px;
+  }
+
+  .choice-buttons button:hover {
+    background-color: #ddd;
+  }
+
+
   </style>
 </head>
 <body>
@@ -676,64 +716,47 @@ h2{
   <div class="card-icon"><i class="fa-solid fa-image"></i></div>
   <div class="card-title">إزالة خلفية الصورة</div>
   <div class="card-desc">
-    يمكنك  إزالة خلفية الصورة من خلال اختيار الصورة والضغط على تحمي وسيتم تحميل الصورة مباشرة اذا كانت الصورة مدعومة.
+    يمكنك إزالة خلفية الصورة من خلال اختيار الصورة والضغط على تحميل، وسيتم تحميل الصورة مباشرة إذا كانت الصورة مدعومة.
   </div>
 
   <div class="file-upload-container">
-    <!-- input الصورة -->
-    <input type="file" accept="image/*" id="bgRemoveInput" onchange="startProgress()" />
+    <!-- Inputs -->
+    <input type="file" accept="image/*" capture="environment" id="bgRemoveInput1" style="display:none" />
+    <input type="file" onchange="startProgress()" accept="image/*" id="bgRemoveInput" style="display:none" />
 
     <div class="button-row">
-      <label  for="bgRemoveInput">اختر صورة</label>
+      <!-- Label -->
+      <label id="chooseLabel">اختر صورة</label>
 
-      <!-- زر التحميل -->
-      <button class="Download-button" onclick="removeBackground()">
-        <span>تحميل</span>
-        <i class="fa-solid fa-download"></i>
-      </button>
-    </div>
+      <!-- تظهر تحت "اختر صورة" مباشرة -->
+      <div class="choice-buttons" id="choiceButtons">
+        <button onclick="openCamera()" id="cameraBtn" >كاميرا</button>
+        <button id="galleryBtn">البوم</button>
+      </div>
+
+    <!-- زر التحميل -->
+    <button class="Download-button" onclick="removeBgLocal()">
+      <span>تحميل</span>
+      <i class="fa-solid fa-download"></i>
+    </button>
+  </div>
+      </div>
+
+
+
+    <!-- مكتبات TensorFlow و BodyPix -->
+
+
 
     <!-- شريط التقدم -->
     <div class="progressContainer" id="progressContainer" style="height: 5px; border-radius: 200px; background: #ccc; margin-top: 10px; width: 100%; display: none;">
-      <div id="progressBar" style="height: 100%; width: 0%; border-radius: 200px; background: #3498db;"></div>
+      <div id="progressBar" style="height: 100%; width: 0%; border-radius: 200px; background: #00cc22;"></div>
     </div>
 
     <!-- ✅ العداد النصي -->
-    <div id="progressText" style="text-align: center;  margin-top: -2px; font-size: 14px; display: none;">0%</div>
-  </div>
+    <div id="progressText" style="text-align: center;  margin-top: 2px; font-size: 14px; display: none;">0%</div>
 </div>
 
-<!-- JavaScript -->
-<script>
-  function startProgress() {
-    const container = document.getElementById("progressContainer");
-    const bar = document.getElementById("progressBar");
-    const text = document.getElementById("progressText");
-
-    container.style.display = "block";
-    text.style.display = "block";
-    bar.style.width = "0%";
-    text.innerText = "0%";
-
-    let progress = 0;
-    const interval = 40; // تحديث كل 40ms
-    const duration = 4000; // 4 ثواني
-    const step = 100 / (duration / interval);
-
-    const timer = setInterval(() => {
-      progress += step;
-      if (progress >= 100) {
-        progress = 100;
-        clearInterval(timer);
-      }
-      bar.style.width = progress + "%";
-      text.innerText = Math.round(progress) + "%";
-    }, interval);
-  }
-
-
-  
-</script>
 
 
 
@@ -749,7 +772,6 @@ h2{
         <div class="button-row">
 
       <label for="compressInput">اختر صورة</label>
-      <label for="compressInput1">اختر كاميرا</label>
       <button onclick="compressImage()">ضغط وتحميل</button>
     </div>
     </div>
@@ -788,6 +810,142 @@ h2{
   <span>  جميع الحقوق محفوظة عبدالخالق النعيمي © 2025</span>
     </div>
 </footer>
+<script>
+  function openCamera() {
+    const input = document.getElementById("bgRemoveInput1");
+
+    // إعادة تعيين حتى لا يحتفظ بحدث سابق
+    input.value = "";
+
+    input.onchange = () => {
+      if (input.files.length > 0) {
+        startProgress();
+      }
+    };
+
+    input.click();
+  }
+</script>
+
+<script>
+  const chooseLabel = document.getElementById('chooseLabel');
+  const choiceButtons = document.getElementById('choiceButtons');
+  const bgRemoveInput1 = document.getElementById('bgRemoveInput1');
+  const bgRemoveInput = document.getElementById('bgRemoveInput');
+
+  chooseLabel.addEventListener('click', () => {
+    if (choiceButtons.style.display === 'flex') {
+      choiceButtons.style.display = 'none';
+    } else {
+      choiceButtons.style.display = 'flex';
+    }
+  });
+
+  document.getElementById('cameraBtn').addEventListener('click', () => {
+    choiceButtons.style.display = 'none';
+    cameraInput.click();
+  });
+
+  document.getElementById('galleryBtn').addEventListener('click', () => {
+    choiceButtons.style.display = 'none';
+    bgRemoveInput.click();
+  });
+
+  // إذا أردت تلتقط الصور أو تعالج الملفات بعد الاختيار، تضيف هنا مستمعين
+  cameraInput.addEventListener('change', (e) => {
+    if (e.target.files.length > 0) {
+      console.log('تم اختيار صورة من الكاميرا');
+      // معالجتك هنا
+    }
+  });
+
+  galleryInput.addEventListener('change', (e) => {
+    if (e.target.files.length > 0) {
+      console.log('تم اختيار صورة من البوم الصور');
+      // معالجتك هنا
+    }
+  });
+</script>
+<!-- JavaScript -->
+<script>
+  function startProgress() {
+    const container = document.getElementById("progressContainer");
+    const bar = document.getElementById("progressBar");
+    const text = document.getElementById("progressText");
+
+    container.style.display = "block";
+    text.style.display = "block";
+    bar.style.width = "0%";
+    text.innerText = "0%";
+
+    let progress = 0;
+    const interval = 40; // تحديث كل 40ms
+    const duration = 4000; // 4 ثواني
+    const step = 100 / (duration / interval);
+
+    const timer = setInterval(() => {
+      progress += step;
+      if (progress >= 100) {
+        progress = 100;
+        clearInterval(timer);
+      }
+      bar.style.width = progress + "%";
+      text.innerText = Math.round(progress) + "%";
+    }, interval);
+  }
+
+
+  
+</script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.9.0"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0.5"></script>
+
+<script>
+   async function removeBgLocal() {
+    const input1 = document.getElementById("bgRemoveInput");
+    const input2 = document.getElementById("bgRemoveInput1");
+    
+    const fileInput = input1.files.length ? input1 : input2;
+    const file = fileInput.files[0];
+    if (!file) return alert("اختر صورة أولاً");
+
+    const img = new Image();
+    img.crossOrigin = "anonymous";
+
+    img.onload = async () => {
+      const canvas = document.createElement("canvas");
+      canvas.width = img.width;
+      canvas.height = img.height;
+      const ctx = canvas.getContext("2d");
+      ctx.drawImage(img, 0, 0);
+
+      const net = await bodyPix.load();
+      const segmentation = await net.segmentPerson(img);
+
+      const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      const pixels = imageData.data;
+
+      for (let i = 0; i < pixels.length / 4; i++) {
+        if (segmentation.data[i] === 0) {
+          pixels[i * 4 + 3] = 0; // شفافية الخلفية
+        }
+      }
+
+      ctx.putImageData(imageData, 0, 0);
+
+      // تحميل الصورة الناتجة تلقائياً
+      const outputUrl = canvas.toDataURL("image/png");
+      const link = document.createElement("a");
+      link.href = outputUrl;
+      link.download = "no-background.png";
+      link.click();
+    };
+
+    const reader = new FileReader();
+    reader.onload = () => { img.src = reader.result; };
+    reader.readAsDataURL(file);
+  }
+</script>
 
   <script>
     const toggleButton = document.getElementById("themeToggle");
@@ -815,33 +973,12 @@ h2{
       }
     });
   </script>
+  <script>
 
-<script>
-  async function removeBackground() {
-    const file = document.getElementById("bgRemoveInput").files[0];
-    if (!file) return alert("اختر صورة أولاً");
 
-    const formData = new FormData();
-    formData.append("image_file", file);
-    formData.append("size", "auto");
 
-    const response = await fetch("https://api.remove.bg/v1.0/removebg", {
-      method: "POST",
-      headers: { "X-Api-Key": "h5Ecn8VCfL1T7Wf6NuuH5gfv" },
-      body: formData
-    });
-    document.getElementById("progressContainer").style.display = "none";
-    document.getElementById("progressText").style.display = "none";
-    if (!response.ok) return alert("فشل في إزالة الخلفية. تأكد من نوع الصورة .");
 
-    const blob = await response.blob();
-    const url = URL.createObjectURL(blob);
-    const link = document.createElement("a");
-    link.href = url;
-    link.download = "no-background.png";
-    link.click();
 
-  }
 
   function compressImage() {
     const file = document.getElementById("compressInput").files[0];
@@ -872,36 +1009,6 @@ h2{
 
 
 
-  function textToPDF() {
-    const text = document.getElementById("textToPdfInput").value.trim();
-    if (!text) return alert("يرجى كتابة النص أولاً.");
-
-    const docDefinition = {
-      content: [{ text: text, fontSize: 16, alignment: 'right' }],
-      defaultStyle: { font: 'Helvetica' }
-    };
-
-    pdfMake.createPdf(docDefinition).download("text.pdf");
-  }
-
-  async function extractTextFromPDF() {
-    const file = document.getElementById("extractTextPdf").files[0];
-    if (!file) return alert("اختر ملف PDF");
-
-    const reader = new FileReader();
-    reader.onload = async function() {
-      const typedarray = new Uint8Array(reader.result);
-      const pdfDoc = await PDFLib.PDFDocument.load(typedarray);
-      let text = '';
-      const pages = pdfDoc.getPages();
-      for (const page of pages) {
-        const content = await page.getTextContent();
-        text += content.items.map(i => i.str).join(' ') + "\n";
-      }
-      document.getElementById("pdfTextOutput").textContent = text;
-    };
-    reader.readAsArrayBuffer(file);
-  }
 </script>
 <script>
   const scrollBtn = document.getElementById("scrollBtn");
