--- a/imgs.html
+++ b/imgs.html
@@ -452,13 +452,8 @@ body.dark-mode select {
 
 .card .file-upload-container label {
   background-color: #db3434;
-  color: white;
-  font-size: 14px;
-  width: 70px;
-  cursor: pointer;
-  font-weight: bold;
-  text-align: center;
-  display: block;
+  width: 100px;
+  
 }
 
 .card .file-upload-container label:hover {
@@ -726,7 +721,10 @@ h2{
 
     <div class="button-row">
       <!-- Label -->
-      <label id="chooseLabel">اختر صورة</label>
+      <label class="Download-button" id="chooseLabel">
+        اختيار صورة
+        <i class="fa-regular fa-object-group"></i>
+      </label>
 
       <!-- تظهر تحت "اختر صورة" مباشرة -->
       <div class="choice-buttons" id="choiceButtons">
