--- a/imgs.html
+++ b/imgs.html
@@ -707,8 +707,8 @@ h2{
       </label>
 
       <div class="choice-buttons" id="choiceButtons">
-        <button onclick="document.getElementById('bgRemoveInput1').click()">كاميرا</button>
-        <button onclick="document.getElementById('bgRemoveInput').click()">البوم</button>
+        <button onclick="document.getElementById('bgRemoveInput1').click()">كاميرا  <i class="fa-solid fa-camera"></i></button>
+        <button onclick="document.getElementById('bgRemoveInput').click()">البوم   <i class="fa-solid fa-images"></i></button>
       </div>
 
       <button class="Download-button" onclick="removeBgLocal()">
@@ -750,8 +750,8 @@ h2{
 
 <!-- أزرار الكاميرا والألبوم -->
 <div class="choice-buttons" id="choiceButtons2">
-  <button onclick="document.getElementById('compressInput2a').click()">كاميرا</button>
-  <button onclick="document.getElementById('compressInput2').click()">البوم</button>
+  <button onclick="document.getElementById('compressInput2a').click()">كاميرا    <i class="fa-solid fa-camera"></i></button>
+  <button onclick="document.getElementById('compressInput2').click()">البوم   <i class="fa-solid fa-images"></i></button>
 </div>
 
       <button class="Download-button" onclick="compressImage()">
